some small interface fixes (alignment, drawing when done instead of before, etc

--- a/wardrobe_async/wardrobe.css
+++ b/wardrobe_async/wardrobe.css
@@ -39,3 +39,6 @@ td {
 	word-wrap: break-word;
 	word-break: break-all;
 }
+.a-right {
+text-align: right;	
+}
